--- a/tcr.tex
+++ b/tcr.tex
@@ -18,19 +18,19 @@
 \usepackage{listings}
 \lstset{
 	language={C++},
-    	numbers=left,
-     	stepnumber=1,
-     	numbersep=6pt,
-     	numberstyle=\footnotesize,
-     	breaklines=true,
-     	breakautoindent=true,
-     	breakatwhitespace=false,
-     	postbreak=\space,
-     	tabsize=2,
-     	basicstyle=\ttfamily\footnotesize,
-     	showspaces=false,
-     	showstringspaces=false,
-     	extendedchars=true,
+	numbers=left,
+	stepnumber=1,
+	numbersep=6pt,
+	numberstyle=\footnotesize,
+	breaklines=true,
+	breakautoindent=true,
+	breakatwhitespace=false,
+	postbreak=\space,
+	tabsize=2,
+	basicstyle=\ttfamily\footnotesize,
+	showspaces=false,
+	showstringspaces=false,
+	extendedchars=true,
 	keywordstyle=\color{blue}\bfseries,
 	stringstyle=\color{darkred},
 	commentstyle=\color{darkgreen}
@@ -38,9 +38,17 @@
 
 \usepackage[top=2cm, bottom=2cm, left=2cm, right=1cm]{geometry}
 
+\title{Team Contest Reference}
+\author{ChaosKITs \\ Karlsruhe Institute of Technology}
+
 \begin{document}
+
+\maketitle
+\tableofcontents
+\newpage
 
 \input{maxFlow/maxFlow}
 \input{geometry/geometry}
+\input{sonstiges/sonstiges}
 
 \end{document}
