SCCS added, seperated from 2-SAT

--- a/tcr.tex
+++ b/tcr.tex
@@ -47,7 +47,7 @@
 \tableofcontents
 \newpage
 
-\input{maxFlow/maxFlow}
+\input{graph/graph}
 \input{geometry/geometry}
 \input{sonstiges/sonstiges}
 
