--- a/sonstiges/sonstiges.tex
+++ b/sonstiges/sonstiges.tex
@@ -1,4 +1,9 @@
 \section{Sonstiges}
 
 \subsection{2-SAT}
-\lstinputlisting{sonstiges/2sat.cpp}
+\begin{enumerate}
+	\item Bedingungen in 2-CNF formulieren.
+	\item Implikationsgraph bauen, $\left(a \vee b\right)$ wird zu $\neg a \Rightarrow b$ und $\neg b \Rightarrow a$.
+	\item Finde die starken Zusammenhangskomponenten.
+	\item Genau dann lösbar, wenn keine Variable mit ihrer Negation in einer SCC liegt.
+\end{enumerate}
