union find und Segementbaum

--- a/tcr.tex
+++ b/tcr.tex
@@ -47,6 +47,7 @@
 \tableofcontents
 \newpage
 
+\input{datastructures/datastructures}
 \input{graph/graph}
 \input{geometry/geometry}
 \input{sonstiges/sonstiges}
