--- a/datastructures/datastructures.tex
+++ b/datastructures/datastructures.tex
@@ -3,5 +3,5 @@
 \subsection{Union-Find}
 \lstinputlisting{datastructures/unionFind.cpp}
 
-\subsection{Segmentbaum)}
+\subsection{Segmentbaum}
 \lstinputlisting{datastructures/segmentTree.cpp}
