--- a/geometry/geometry.tex
+++ b/geometry/geometry.tex
@@ -1,4 +1,7 @@
-\section{Geometry}
+\section{Geometrie}
 
 \subsection{Closest Pair}
 \lstinputlisting{geometry/closestPair.cpp}
+
+\subsection{Formeln - \lstinline{std::complex}}
+\lstinputlisting{geometry/formulars.cpp}
