--- a/graph/graph.tex
+++ b/graph/graph.tex
@@ -1,4 +1,4 @@
-\section{Graph}
+\section{Graphen}
 
 \subsection{Strongly Connected Components (\textsc{Tarjans}-Algorithmus)}
 \lstinputlisting{graph/scc.cpp}
