--- a/tcr.tex
+++ b/tcr.tex
@@ -50,6 +50,7 @@
 \input{datastructures/datastructures}
 \input{graph/graph}
 \input{geometry/geometry}
+\input{math/math}
 \input{sonstiges/sonstiges}
 
 \end{document}
