bellmann ford, gcd, lcm, ectended euclid

--- a/graph/graph.tex
+++ b/graph/graph.tex
@@ -1,5 +1,10 @@
 \section{Graphen}
 
+\subsection{Kürzeste Wege}
+
+\subsubsection{\textsc{Bellmann-Ford}-Algorithmus}
+\lstinputlisting{graph/bellmannFord.cpp}
+
 \subsection{Strongly Connected Components (\textsc{Tarjans}-Algorithmus)}
 \lstinputlisting{graph/scc.cpp}
 
