--- a/math/math.tex
+++ b/math/math.tex
@@ -1,4 +1,8 @@
 \section{Mathe}
 
+\subsection{ggT, kgV, erweiterter euklidischer Algorithmus}
+\lstinputlisting{math/gcd-lcm.cpp}
+\lstinputlisting{math/extendedEuclid.cpp}
+
 \subsection{Binomialkoeffizienten}
 \lstinputlisting{math/binomial.cpp}
