--- a/graph/graph.tex
+++ b/graph/graph.tex
@@ -2,7 +2,12 @@
 
 \subsection{Kürzeste Wege}
 
+\subsubsection{Algorithmus von \textsc{Dijkstra}}
+Kürzeste Pfade in Graphen ohne negative Kanten.
+\lstinputlisting{graph/dijkstra.cpp}
+
 \subsubsection{\textsc{Bellmann-Ford}-Algorithmus}
+Kürzestes Pfade in Graphen mit negativen Kanten. Erkennt negative Zyklen.
 \lstinputlisting{graph/bellmannFord.cpp}
 
 \subsection{Strongly Connected Components (\textsc{Tarjans}-Algorithmus)}
