--- a/geometry/geometry.tex
+++ b/geometry/geometry.tex
@@ -3,5 +3,8 @@
 \subsection{Closest Pair}
 \lstinputlisting{geometry/closestPair.cpp}
 
+\subsection{Geraden}
+\lstinputlisting{geometry/lines.cpp}
+
 \subsection{Formeln - \lstinline{std::complex}}
 \lstinputlisting{geometry/formulars.cpp}
