--- a/math/math.tex
+++ b/math/math.tex
@@ -17,6 +17,13 @@ Sei $0 \leq x < n$. Definiere $d := gcd(x, n)$.
 \end{description}
 \lstinputlisting{math/multInv.cpp}
 
+
+\subsubsection{Primzahlsieb von Eratosthenes}
+\lstinputlisting{math/primeSieve.cpp}
+
+\subsubsection{Faktorisierung}
+\lstinputlisting{math/factor.cpp}
+
 \subsubsection{Mod-Exponent über $\mathbb{F}_p$}
 \lstinputlisting{math/modExp.cpp}
 
