--- a/graph/graph.tex
+++ b/graph/graph.tex
@@ -13,5 +13,8 @@ Kürzestes Pfade in Graphen mit negativen Kanten. Erkennt negative Zyklen.
 \subsection{Strongly Connected Components (\textsc{Tarjans}-Algorithmus)}
 \lstinputlisting{graph/scc.cpp}
 
+\subsection{Artikulationspunkte und Brücken}
+\lstinputlisting{graph/articulationPoints.cpp}
+
 \subsection{Max-Flow (\textsc{Edmonds-Karp}-Algorithmus)}
 \lstinputlisting{graph/edmondsKarp.cpp}
