--- a/math/math.tex
+++ b/math/math.tex
@@ -17,10 +17,6 @@ Sei $0 \leq x < n$. Definiere $d := gcd(x, n)$.
 \end{description}
 \lstinputlisting{math/multInv.cpp}
 
-
-\subsubsection{Primzahlsieb von Eratosthenes}
-\lstinputlisting{math/primeSieve.cpp}
-
 \subsubsection{Faktorisierung}
 \lstinputlisting{math/factor.cpp}
 
@@ -32,3 +28,6 @@ Sei $0 \leq x < n$. Definiere $d := gcd(x, n)$.
 
 \subsection{Binomialkoeffizienten}
 \lstinputlisting{math/binomial.cpp}
+
+\subsection{Primzahlsieb von Eratosthenes}
+\lstinputlisting{math/primeSieve.cpp}
