--- a/tcr.tex
+++ b/tcr.tex
@@ -56,6 +56,7 @@
 \input{graph/graph}
 \input{geometry/geometry}
 \input{math/math}
+\input{string/string}
 \input{sonstiges/sonstiges}
 
 \end{document}
