added longest common subsequence

--- a/string/string.tex
+++ b/string/string.tex
@@ -11,3 +11,6 @@
 
 \subsection{Longest Common Substring}
 \lstinputlisting{string/LCSubstring.cpp}
+
+\subsection{Longest Common Subsequence}
+\lstinputlisting{string/LCSubSequence.cpp}
