update tex mit convex hull

--- a/geometry/geometry.tex
+++ b/geometry/geometry.tex
@@ -6,5 +6,8 @@
 \subsection{Geraden}
 \lstinputlisting{geometry/lines.cpp}
 
+\subsection{Konvexe Hülle}
+\lstinputlisting{geometry/convexHull.cpp}
+
 \subsection{Formeln - \lstinline{std::complex}}
 \lstinputlisting{geometry/formulars.cpp}
