--- a/graph/graph.tex
+++ b/graph/graph.tex
@@ -1,5 +1,8 @@
 \section{Graphen}
 
+\subsection{Lowest Common Ancestor}
+\lstinputlisting{graph/LCA.cpp}
+
 \subsection{Kürzeste Wege}
 
 \subsubsection{Algorithmus von \textsc{Dijkstra}}
