--- a/graph/graph.tex
+++ b/graph/graph.tex
@@ -10,6 +10,10 @@ Kürzeste Pfade in Graphen ohne negative Kanten.
 Kürzestes Pfade in Graphen mit negativen Kanten. Erkennt negative Zyklen.
 \lstinputlisting{graph/bellmannFord.cpp}
 
+\subsubsection{\textsc{Floyd-Warshall}-Algorithmus}
+Alle kürzesten Pfade im Graphen.
+\lstinputlisting{graph/floydWarshall.cpp}
+
 \subsection{Strongly Connected Components (\textsc{Tarjans}-Algorithmus)}
 \lstinputlisting{graph/scc.cpp}
 
