some max flow comments

--- a/tcr.tex
+++ b/tcr.tex
@@ -21,6 +21,7 @@
 \chead{ChaosKITs}
 \ohead{\pagemark}
 
+\usepackage{pxfonts}
 \usepackage{listings}
 \lstset{
 	language={C++},
@@ -32,14 +33,15 @@
 	breakautoindent=true,
 	breakatwhitespace=false,
 	postbreak=\space,
-	tabsize=2,
+	tabsize=4,
 	basicstyle=\ttfamily\footnotesize,
 	showspaces=false,
 	showstringspaces=false,
 	extendedchars=true,
-	keywordstyle=\color{blue}\bfseries,
-	stringstyle=\color{darkred},
-	commentstyle=\color{darkgreen}
+	keywordstyle=\bfseries,
+	stringstyle=\bfseries,
+	commentstyle=\bfseries,
+	frame=trbl
 }
 
 \usepackage[top=2cm, bottom=2cm, left=2cm, right=1cm]{geometry}
