--- a/graph/graph.tex
+++ b/graph/graph.tex
@@ -44,3 +44,18 @@ VISIT(v):
 
 \subsection{Max-Flow (\textsc{Edmonds-Karp}-Algorithmus)}
 \lstinputlisting{graph/edmondsKarp.cpp}
+
+\subsubsection{Maximum Edge Disjoint Paths}
+Finde die maximale Anzahl Pfade von $s$ nach $t$, die keine Kante teilen.
+\begin{enumerate}
+	\item Setze $s$ als Quelle, $t$ als Senke und die Kapazität jeder Kante auf 1.
+	\item Der maximale Fluss entspricht der unterschiedlichen Pfade ohne gemeinsame Kanten.
+\end{enumerate}
+
+\subsubsection{Maximum Independent Paths}
+Finde die maximale Anzahl Pfade von $s$ nach $t$, die keinen Knoten teilen.
+\begin{enumerate}
+	\item Setze $s$ als Quelle, $t$ als Senke und die Kapazität jeder Kante \emph{und jedes Knotens} auf 1.
+	\item Der maximale Fluss entspricht der unterschiedlichen Pfade ohne gemeinsame Knoten.
+\end{enumerate}
+
