--- a/graph/graph.tex
+++ b/graph/graph.tex
@@ -1,7 +1,11 @@
 \section{Graphen}
 
-\subsection{Lowest Common Ancestor}
-\lstinputlisting{graph/LCA.cpp}
+\subsection{Minimale Spannbäume}
+Benutze Algorithmus von \textsc{Kruskal} oder Algorithmus von \textsc{Prim}.
+\begin{description}
+	\item[Schnitteigenschaft] Für jeden Schnitt $C$ im Graphen gilt: Gibt es eine Kante $e$, die echt leichter ist als alle anderen Schnittkanten, so gehört diese zu allen minimalen Spannbäumen. ($\Rightarrow$ Die leichteste Kante in einem Schnitt kann in einem minimalen Spannbaum verwendet werden.)
+	\item[Kreiseigenschaft] Für jeden Kreis $K$ im Graphen gilt: Die schwerste Kante auf dem Kreis ist nicht Teil des minimalen Spannbaums.
+\end{description}
 
 \subsection{Kürzeste Wege}
 
@@ -41,6 +45,9 @@ VISIT(v):
 \caption{Idee für Eulerzyklen}
 \end{figure}
 \lstinputlisting{graph/euler.cpp}
+
+\subsection{Lowest Common Ancestor}
+\lstinputlisting{graph/LCA.cpp}
 
 \subsection{Max-Flow (\textsc{Edmonds-Karp}-Algorithmus)}
 \lstinputlisting{graph/edmondsKarp.cpp}
