Was passiert, wenn wir Java begegnen

--- a/tcr.tex
+++ b/tcr.tex
@@ -65,6 +65,7 @@
 \input{geometry/geometry}
 \input{math/math}
 \input{string/string}
+\input{java/java.tex}
 \input{sonstiges/sonstiges}
 
 \end{document}
