--- a/datastructures/datastructures.tex
+++ b/datastructures/datastructures.tex
@@ -8,3 +8,6 @@
 
 \subsection{Range Minimum Query}
 \lstinputlisting{datastructures/RMQ.cpp}
+
+\subsection{STL-Tree}
+\lstinputlisting{datastructures/stlTree.cpp}
