--- a/sonstiges/sonstiges.tex
+++ b/sonstiges/sonstiges.tex
@@ -9,7 +9,7 @@
 \end{enumerate}
 
 \subsection{Sortieren in Linearzeit}
-Wenn die Eingabe aus einem kleinen Intervall $\left[0, n\right)$ stammt ist Bucketsort \lstinline{bucketSort(vector<int> ..., n);} schneller.
+Wenn die Eingabe aus einem kleinen Intervall $\left[0, n\right)$ stammt ist Bucketsort schneller.
 
 \subsubsection{Bucketsort}
 \lstinputlisting{sonstiges/bucketSort.cpp}
