--- a/tcr.tex
+++ b/tcr.tex
@@ -47,6 +47,9 @@
 \usepackage[top=2cm, bottom=2cm, left=2cm, right=1cm]{geometry}
 
 \usepackage{multicol}
+\usepackage{multirow}
+
+\newtheorem{bem}{Bemerkung}
 
 \title{Team Contest Reference}
 \author{ChaosKITs \\ Karlsruhe Institute of Technology}
