--- a/sonstiges/sonstiges.tex
+++ b/sonstiges/sonstiges.tex
@@ -16,3 +16,6 @@ Wenn die Eingabe aus einem kleinen Intervall $\left[0, n\right)$ stammt ist Buck
 
 \subsubsection{LSD-Radixsort}
 \lstinputlisting{sonstiges/radixsort.cpp}
+
+\subsubsection{Bit Operations}
+\lstinputlisting{sonstiges/bitOps.cpp}
