--- a/sonstiges/sonstiges.tex
+++ b/sonstiges/sonstiges.tex
@@ -19,3 +19,6 @@ Wenn die Eingabe aus einem kleinen Intervall $\left[0, n\right)$ stammt ist Buck
 
 \subsubsection{Bit Operations}
 \lstinputlisting{sonstiges/bitOps.cpp}
+
+\subsubsection{Roman-Literal-Converting}
+\lstinputlisting{sonstiges/Roman.cpp}
