Eingabehilfe für Zeilenweise-Eingabe

--- a/sonstiges/sonstiges.tex
+++ b/sonstiges/sonstiges.tex
@@ -15,7 +15,7 @@ Wenn die Eingabe aus einem kleinen Intervall $\left[0, n\right)$ stammt ist Buck
 \lstinputlisting{sonstiges/bucketSort.cpp}
 
 \subsubsection{LSD-Radixsort}
-\lstinputlisting{sonstiges/radixsort.cpp}
+\lstinputlisting{sonstiges/radixSort.cpp}
 
 \subsection{Bit Operations}
 \lstinputlisting{sonstiges/bitOps.cpp}
