--- a/graph/graph.tex
+++ b/graph/graph.tex
@@ -69,3 +69,6 @@ Finde die maximale Anzahl Pfade von $s$ nach $t$, die keinen Knoten teilen.
 \subsection{Maximal Cardinatlity Bipartite Mathcing}
 \lstinputlisting{graph/maxCarBiMatch.cpp}
 
+\subsection{Bitonic TSP}
+\lstinputlisting{graph/bitonicTSP.cpp}
+
