--- a/string/string.tex
+++ b/string/string.tex
@@ -3,6 +3,9 @@
 \subsection{\textsc{Knuth-Morris-Pratt}-Algorithmus}
 \lstinputlisting{string/kmp.cpp}
 
+\subsection{\textsc{Levenshtein}-Distanz}
+\lstinputlisting{string/levenshtein.cpp}
+
 \subsection{Trie}
 \lstinputlisting{string/trie.cpp}
 
