--- a/java/java.tex
+++ b/java/java.tex
@@ -28,7 +28,7 @@ Hier ein kleiner überblick über die Methoden der Klasse BigInteger:
 //Returns this +,*,/,- val
 BigInteger add(BigInteger val), multiply(BigInteger val), divide(BigInteger val), substract(BigInteger val)
 
-//Returns this\(^e\)
+//Returns this^e
 BigInteger pow(BigInteger e)
 
 //Bit-Operations
@@ -37,7 +37,7 @@ BigInteger and(BigInteger val), or(BigInteger val), xor(BigInteger val), not(), 
 //Returns the greatest common divisor of abs(this) and abs(val)
 BigInteger gcd(BigInteger val)
 
-//Returns this mod m, this\(^{-1}\) mod m, this\(^e\) mod m
+//Returns this mod m, this^-1 mod m, this^e mod m
 BigInteger mod(BigInteger m), modInverse(BigInteger m), modPow(BigInteger e, BigInteger m)
 
 //Returns the next number that is greater than this and that is probably a prime.
