--- a/tcr.tex
+++ b/tcr.tex
@@ -68,7 +68,7 @@
 \input{geometry/geometry}
 \input{math/math}
 \input{string/string}
-\input{java/java.tex}
+\input{java/java}
 \input{sonstiges/sonstiges}
 \input{convenience/convenience}
 
