--- a/graph/graph.tex
+++ b/graph/graph.tex
@@ -67,6 +67,9 @@ Finde die maximale Anzahl Pfade von $s$ nach $t$, die keinen Knoten teilen.
 	\item Der maximale Fluss entspricht der unterschiedlichen Pfade ohne gemeinsame Knoten.
 \end{enumerate}
 
+\subsection{Min-Cost-Max-Flow}
+\lstinputlisting{graph/minCostMaxFlow.cpp}
+
 \subsection{Maximal Cardinatlity Bipartite Matching}\label{kuhn}
 \lstinputlisting{graph/maxCarBiMatch.cpp}
 
