Improvements in datastructures chapter.

--- a/datastructures/datastructures.tex
+++ b/datastructures/datastructures.tex
@@ -5,6 +5,8 @@
 
 \subsection{Segmentbaum}
 \lstinputlisting{datastructures/segmentTree.cpp}
+\lstinline{update()} kann so umgeschrieben werden, dass ganze Intervalle geändert werden.
+Dazu muss ein Offset in den inneren Knoten des Baums gespeichert werden.
 
 \subsection{Range Minimum Query}
 \lstinputlisting{datastructures/RMQ.cpp}
