Add Fenwick-Tree to section datastructures

--- a/datastructures/datastructures.tex
+++ b/datastructures/datastructures.tex
@@ -8,6 +8,10 @@
 \lstinline{update()} kann so umgeschrieben werden, dass ganze Intervalle geändert werden.
 Dazu muss ein Offset in den inneren Knoten des Baums gespeichert werden.
 
+\subsection{Fenwick Tree}
+\lstinputlisting{datastructures/fenwickTree.cpp}
+
+
 \subsection{Range Minimum Query}
 \lstinputlisting{datastructures/RMQ.cpp}
 
