Adding a template for C++ files with the general header.

--- a/convenience/convenience.tex
+++ b/convenience/convenience.tex
@@ -2,3 +2,9 @@
 
 \subsection{Zeileneingabe}
 \lstinputlisting{convenience/split.cpp}
+
+\subsection{Template}
+\lstinputlisting{convenience/template.cpp}
+
+\subsection{Keyboard Layout}
+\lstinline{setxkbmap de} setzt deutsched Tastaturlayout.
