Formatting keyboard layout section nicely.

--- a/convenience/convenience.tex
+++ b/convenience/convenience.tex
@@ -6,5 +6,7 @@
 \subsection{Template}
 \lstinputlisting{convenience/template.cpp}
 
-\subsection{Keyboard Layout}
-\lstinline{setxkbmap de} setzt deutsched Tastaturlayout.
+\subsection{Deutsches Tatstaturlayout}
+\begin{lstlisting}
+setxkbmap de
+\end{lstlisting}
