Adding an Aho-Corasick automaton for string multimatching.

--- a/string/string.tex
+++ b/string/string.tex
@@ -3,6 +3,9 @@
 \subsection{\textsc{Knuth-Morris-Pratt}-Algorithmus}
 \lstinputlisting{string/kmp.cpp}
 
+\subsection{\textsc{Aho-Corasick}-Automat}
+\lstinputlisting{string/ahoCorasick.cpp}
+
 \subsection{\textsc{Levenshtein}-Distanz}
 \lstinputlisting{string/levenshtein.cpp}
 
